infra/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-http
  labels:
    app-type: demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: simple-http
  template:
    metadata:
      labels:
        app: simple-http
    spec:
      containers:
      - image: szaffarano/argocd-sandbox:latest
        name: simple-http
        args:
          - "-host"
          - "0.0.0.0"
          - "-p"
          - "8080"
        ports:
        - containerPort: 8080
